[gd_scene load_steps=4 format=3 uid="uid://dwhj7irgsi7n6"]

[ext_resource type="Script" path="res://scenes/journals/journal.gd" id="1_cjn4c"]
[ext_resource type="Texture2D" uid="uid://cark8kl2ivdbh" path="res://Assets/journal/periodico1.png" id="1_w6d6p"]
[ext_resource type="FontFile" uid="uid://b4lf3edghytvx" path="res://Assets/UI/dogicapixel.ttf" id="2_g3ixs"]

[node name="periodicoScene" type="Node2D"]
script = ExtResource("1_cjn4c")
journalTitle = "EL TITULAR"
journalArticle1 = "SONORA Y SINALOA, SUELOS INFERTILES"
journalArticle2 = "SUELO ACIDO DESTRUYE CULTIVOS EN VERACRUZ"
journalArticle3 = "AUMENTO DE PH "

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -375.0
offset_top = -245.0
offset_right = 357.0
offset_bottom = 229.0
color = Color(0.643137, 0.603922, 0.482353, 1)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Periodico" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_w6d6p")

[node name="JournalTitle" type="Label" parent="."]
offset_left = -91.0
offset_top = -148.0
offset_right = 71.0
offset_bottom = -122.0
theme_override_colors/font_color = Color(0.643137, 0.603922, 0.482353, 1)
theme_override_fonts/font = ExtResource("2_g3ixs")
theme_override_font_sizes/font_size = 32
text = "EL PERIODICO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JournalArticle1" type="Label" parent="."]
offset_left = -7.0
offset_top = -61.0
offset_right = 224.0
offset_bottom = -45.0
theme_override_colors/font_color = Color(0.643137, 0.603922, 0.482353, 1)
theme_override_fonts/font = ExtResource("2_g3ixs")
theme_override_font_sizes/font_size = 8
text = "EL PERIODICO"
vertical_alignment = 1

[node name="JournalArticle2" type="Label" parent="."]
offset_left = -229.0
offset_top = 74.0
offset_right = -58.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(0.643137, 0.603922, 0.482353, 1)
theme_override_fonts/font = ExtResource("2_g3ixs")
theme_override_font_sizes/font_size = 8
text = "EL PERIODICO"
vertical_alignment = 1

[node name="JournalArticle3" type="Label" parent="."]
offset_left = 133.0
offset_top = 62.0
offset_right = 213.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.643137, 0.603922, 0.482353, 1)
theme_override_fonts/font = ExtResource("2_g3ixs")
theme_override_font_sizes/font_size = 8
text = "EL PERIODICO"
vertical_alignment = 1
